plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'sw4'
version = '0.0.1-SNAPSHOT'

bootJar {
    enabled = false
}

jar{
    enabled = true
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

subprojects {
    group  'befly.micro.service'
    version  '0.0.1-SNAPSHOT'
    sourceCompatibility = '17'

    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation "org.springframework.boot:spring-boot-starter-data-jpa"
        testImplementation 'org.springframework.boot:spring-boot-starter-test'

        //JUnit
        testImplementation 'org.springframework.boot:spring-boot-starter-test'

//      mongodb
        implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

//      kafka 추가
        implementation 'org.springframework.kafka:spring-kafka'

        //    Slf4j for JUnit Test
        testCompileOnly 'org.projectlombok:lombok'
        testAnnotationProcessor 'org.projectlombok:lombok'

        // Mysql 연결
        runtimeOnly 'com.mysql:mysql-connector-j'

//        QueryDSL
        implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
        annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
        annotationProcessor "jakarta.annotation:jakarta.annotation-api"
        annotationProcessor "jakarta.persistence:jakarta.persistence-api"


    }
}

dependencies {
}

tasks.named('test') {
    useJUnitPlatform()
}
